--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
     "normalize.css": "~3.0.3"
   },
   "devDependencies": {
-    "autoprefixer-loader": "^2.0.0",
+    "autoprefixer-loader": "^2.1.0",
     "babel": "^5.0.0",
     "babel-loader": "^5.0.0",
     "css-loader": "~0.9.0",
     "eslint": "^0.21.2",
     "eslint-loader": "^0.11.2",
     "eslint-plugin-react": "^2.4.0",
+    "file-loader": "^0.9.0",
     "grunt": "~0.4.5",
     "grunt-contrib-clean": "~0.6.0",
     "grunt-contrib-connect": "~0.8.0",
@@ -36,6 +37,7 @@
     "karma-script-launcher": "~0.1.0",
     "karma-webpack": "^1.5.0",
     "load-grunt-tasks": "~0.6.0",
+    "node-sass": "^4.1.1",
     "react-hot-loader": "^1.0.7",
     "sass-loader": "^1.0.1",
     "style-loader": "~0.8.0",
